--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ android {
     buildFeatures {
         compose true
         buildConfig = true
+        viewBinding = true
     }
     composeOptions {
         kotlinCompilerExtensionVersion '1.3.2'
@@ -87,4 +88,7 @@ dependencies {
 
     //coil - load image from url
     implementation "io.coil-kt:coil-compose:2.2.2"
+
+    // osm map
+    implementation 'org.osmdroid:osmdroid-android:6.1.16'
 }
