Fourth task commit 2

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,4 +91,6 @@ dependencies {
 
     // osm map
     implementation 'org.osmdroid:osmdroid-android:6.1.16'
+
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 }
